--- a/static/css/custom-styles.css
+++ b/static/css/custom-styles.css
@@ -8,6 +8,22 @@ html {
     background-image: linear-gradient(-90deg, white, darkorange);
 }
 
-body, footer {
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    background-color: transparent;
+    margin-bottom: 60px; /* Margin bottom by footer height */
+    padding-top: 5rem;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
     background-color: transparent;
 }
