--- a/templates/base.html
+++ b/templates/base.html
@@ -15,32 +15,36 @@
     <title>{% block title %}RSS Project{% endblock title %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">FeedMeRSS</a>
-        {% if user.is_authenticated %}
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topnav-links"
-                    aria-controls="topnav-links" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="topnav-links">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/feeds">Feeds</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Profile</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <a type="button" class="btn btn-secondary my-2 my-sm-0" href="{% url 'logout' %}">Logout</a>
-{#                    <button class="btn btn-secondary my-2 my-sm-0" onclick="parent.location='feeds/logout';">Logout</button>#}
-                </form>
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">FeedMeRSS</a>
+    {% if user.is_authenticated %}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topnav-links"
+                aria-controls="topnav-links" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="topnav-links">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/feeds">Feeds</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Profile</a>
+                </li>
+            </ul>
+            <div class="nav-item navbar-nav dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
+                   aria-expanded="false">{{ user.username }}</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{% url "user_profile" %}">Change Password</a>
+                    <a class="dropdown-item" href="{% url "logout" %}">Log Out</a>
+                </div>
             </div>
-        {% endif %}
-    </nav>
+        </div>
+    {% endif %}
+</nav>
 
-    {% block body %}
-    {% endblock body %}
+{% block body %}
+{% endblock body %}
 
 <!-- Footer -->
 <footer class="footer">
