--- a/templates/base.html
+++ b/templates/base.html
@@ -25,10 +25,10 @@
         <div class="collapse navbar-collapse" id="topnav-links">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/feeds">Feeds</a>
+                    <a class="nav-link" href="/feeds">My Feeds</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="{% url 'subscribe' %}">Add Feeds</a>
                 </li>
             </ul>
             <div class="nav-item navbar-nav dropdown">
