--- a/templates/feeds/user-profile.html
+++ b/templates/feeds/user-profile.html
@@ -71,7 +71,7 @@
             {% endif %}
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        {% if context.request_type == 'login' %}
+        {% if request_type == 'login' %}
             <p class="mt-5 mb-3 text-center">Not registered? <a href="{% url 'register' %}">Sign Up!</a></p>
         {% elif request_type == "register_user" %}
             <p class="mt-5 mb-3 text-center">Already registered? <a href="{% url 'login' %}">Log In!</a></p>
